# mimamorisan

./: .gitignore  Cargo.toml  MimamoriSettings.template.toml  README.md
src/: main.rs
