[package]
name = "mimamorisan"
version = "0.1.0"
authors = ["mishan88 <mishanhideaki88@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.11.3"
chrono = "0.4.10"
chrono-tz = "0.5.1"
reqwest = { version = "0.10.1", features = ["blocking", "json"] }
config = "0.9.3"
serde_json = "1.0.44"
openssl = { version = "0.10", features = ["vendored"] }